# n8n-posit-connect-demo

./: .gitignore  GETTING-STARTED.md  LICENSE  README.md  SWAGGER-GUIDE.md  main.py  n8n_demo_api.py  n8n_enrollment_api.py  pyproject.toml  requirements.txt  test_n8n_apis.py
docs/: DEMO-SCRIPT.md  DEPLOYMENT.md  QUICK-START.md
ml/: encoders.joblib  enrollment_model.joblib  model_utils.py  scaler.joblib
