[project]
name = "n8n-posit-connect-demo"
version = "1.0.0"
description = "FastAPI endpoints for n8n workflows on Posit Connect - Domino-compatible format"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Posit Demo Team"}
]
keywords = ["n8n", "posit-connect", "fastapi", "domino", "api", "ml-deployment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.4.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.27.0",
]

[project.urls]
Repository = "https://github.com/your-org/n8n-posit-connect-demo"
Documentation = "https://docs.posit.co/connect/"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["ml", "data", "docs"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
